# swarenderer

./: .clang-format  CMakeLists.txt
include/: App.h  Mesh.h
src/: App.cpp  Mesh.cpp  main.cpp
